# MEng-project

./: .gitignore  DecisionTreeModel.ipynb  README.md  UF_dataset.ipynb  add_m_features.ipynb  analysing_raw_data.ipynb  clean_raw_data.ipynb  construct_dataset.ipynb  construct_users.ipynb  createDataFrame.ipynb  create_text_dict.ipynb  data_processing.ipynb  download_posts.ipynb  feature_names.txt  funcs.py  m_features.py  popular_tags.ipynb  pos_neg.ipynb  pyproject.toml  statistics.ipynb  synthesize_dataset.ipynb  trump_before.jsonl
extra/: data_processing.ipynb  extra_Analysis.ipynb  firehose.ipynb
notebooks/: DecisionTreeModel.py  Ziming.ipynb  analyse_dataset.ipynb  analyse_raw_data.ipynb  construct_users.py  create_text_dict.ipynb  create_text_dict.py  dataset_ratio.ipynb  download_posts.py  entropy_analysis.ipynb  get_message_features.ipynb  get_message_features.py  synthesize_dataset.py
results/Bert/1_1_Ratio/: bert_mixed_20260409_155919.json  bert_mixed_20260409_155919_latex.txt  bert_mixed_20260409_155919_runs.csv  bert_mixed_20260409_155919_summary.csv
results/xgb/: MESSAGE_1TO5_UNIQUE_PID_20260421_170009.json  XGB_HYBRID_1TO1_20260418_141530.json  XGB_HYBRID_1TO5_20260418_140119.json  XGB_MESSAGE_1TO1_20260418_141729.json  XGB_MESSAGE_1TO1_20260423_122827.json  XGB_MESSAGE_1TO5_20260418_135553.json  XGB_USER_1TO1_20260418_134657.json  XGB_USER_1TO5_20260418_135134.json
src/: analyse_raw_data.ipynb  construct_users.ipynb  funcs.py  get_message_features.ipynb  m_features.py  main.py  synthesize_dataset.ipynb  utils.py
src/collect/: api.py  async_client.py  downloader.py  pipeline.py  runner.py  users.py
src/config/: __init__.py  collect.py  dataset.py  experiment.py  model.py  paths.py
src/data/: __init__.py  api.py  downloader.py  pipeline.py  text.py  users.py
src/dataset/: __init_.py  bert_classifier_extractor.py  bert_dataset_builder.py  bert_feature_extractor.py  dataset_builder.py  hybrid_dataset_builder.py  message_dataset_builder.py  message_feature_extractor.py  runner.py  user_dataset_builder.py  user_feature_extractor.py
src/features/: __init_.py  dataset_builder.py  runner.py  user_features.py
src/model/: DT_repost_predictor.py  __init__.py  bert_repost_predictor.py  feature_analysis.py  feature_importance.py  feature_importance_analysis.py  repost_predictor.py  runner.py  xgb_repost_predictor.py  xgboost.py
src/process/: message_features.py  runner.py  text_processing.py
(+6 files in other folders)
