[project]
name = "data-analysis-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "asyncio>=4.0.0",
    "atproto>=0.0.62",
    "certifi>=2025.8.3",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "msgpack>=1.1.1",
    "notebook>=7.4.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "python-dateutil>=2.9.0.post0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "websockets>=13.1",
]
