[project]
name = "data-analysis-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "aiolimiter>=1.2.1",
    "asyncio>=4.0.0",
    "atproto>=0.0.62",
    "certifi>=2025.8.3",
    "git-lfs>=1.6",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "jupyterlab>=4.4.9",
    "langdetect>=1.0.9",
    "language-tool-python>=3.2.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "msgpack>=1.1.1",
    "nltk>=3.9.2",
    "notebook>=7.4.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.3",
    "pysentimiento>=0.7.3",
    "python-dateutil>=2.9.0.post0",
    "readability-lxml>=0.8.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "syntok>=1.4.4",
    "textblob>=0.19.0",
    "textstat>=0.7.13",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=5.2.0",
    "tweet-preprocessor>=0.6.0",
    "uvloop>=0.22.1",
    "websockets>=13.1",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
]
